# scd2

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md  modules.md
src/example_app/: alembic.ini  database.db  main.py
src/example_app/config/: settings.py
src/example_app/controller/: employee.py
src/example_app/db/: session.py
src/example_app/dto/: employee.py  project.py  skill.py
src/example_app/mapper/: employee.py
src/example_app/migrations/dev/: env.py
src/example_app/migrations/dev/versions/: 3b9b27f02f75_models.py
src/example_app/model/: __init__.py  association.py  department.py  employee.py  project.py  skill.py
src/example_app/repository/: employee.py
src/example_app/schema/: employee.py  project.py  skill.py
src/example_app/service/: employee.py
src/scd2/adapters/sqlalchemy/: mixin.py  repository.py
src/scd2/domain/: model.py  ports.py  service.py
src/scd2/util/: hashing.py
